# LSystemTreeGenerator

./: Cargo.toml  Justfile  README.md  plan.md
.github/workflows/: ci.yaml
assets/models/: branch.mtl  cylinder.mtl  floor.mtl  leaf.mtl  monkey.mtl  twig.mtl
assets/shaders/: fragment.glsl  vertex.glsl
docs/: architecture.md
src/: app.rs  camera.rs  common.rs  gui.rs  lsystem.rs  main.rs  model_loader.rs  renderer.rs  scene.rs  shaders.rs  turtle.rs
