[package]
name = "lsystemtreegen"
version = "0.1.0"
edition = "2024"

[dependencies]
egui = "0.31.1"
egui_glium = "0.31.1"
env_logger = "0.11.8"
glium = { version = "0.36.0", features = ["simple_window_builder"] }
itertools = "0.14.0"
log = "0.4.28"
nalgebra-glm = "0.20.0"
rand = "0.9.2"
tobj = "4.0.3"
winit = "0.30.12"
